HW-01 Дописал реализацию и оставшиеся тесты